[project]
name = "cow-amm-orderbook"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Felix Henneke", email = "felix.henneke@protonmail.com" }
]
dependencies = [
    "web3>=6.19.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
watchtower = 'cow_amm_orderbook:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.8",
    "pytest>=8.2.2",
    "mypy>=1.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cow_amm_orderbook"]
